Leere den Wert des Connection URI-Feldes und füge einen Platzhalter hinzu, um die Eingabe zu erleichtern.

--- a/tests/sendevent.html
+++ b/tests/sendevent.html
@@ -84,7 +84,8 @@
         <label class="label" for="conn-uri">Connection URI</label>
         <input
             id="conn-uri"
-            value="nostrconnect://5bde8d1b544f39e4f54127590460c72159d2e7dbd6fa88f826e720ad189c7caa?relay=wss%3A%2F%2Frelay.damus.io&relay=wss%3A%2F%2Fnos.lol&relay=wss%3A%2F%2Frelay.primal.net&relay=wss%3A%2F%2Frelay.snort.social"
+            value=""
+            placeholder="nostrconnect://<pubkey>?relay=wss%3A%2F%2F..."
         />
         <button id="connect-btn">Mit Signer verbinden</button>
         <div id="status">Nicht verbunden</div>
