Refactor code structure for improved readability and maintainability

--- a/mpv-nostr-client.html
+++ b/mpv-nostr-client.html
@@ -137,6 +137,8 @@
             "wss://relay.primal.net",
             "wss://relay.snort.social"
         ];
+        const MIN_SIGNER_FRAME_HEIGHT = 110;
+        const MAX_SIGNER_FRAME_HEIGHT = 1200;
 
         const connectModeInput = document.getElementById("connect-mode");
         const connectHintEl = document.getElementById("connect-hint");
@@ -161,6 +163,7 @@
         let activeRelayUrls = [];
         let nostrProvider = null;
         let cachedPubkey = "";
+        let currentSignerFrameHeight = 260;
 
         function looksLikeNip7Provider(candidate) {
             return !!candidate &&
@@ -235,6 +238,19 @@
             statusEl.className = isError ? "err" : "ok";
         }
 
+        function clampSignerFrameHeight(height) {
+            return Math.max(MIN_SIGNER_FRAME_HEIGHT, Math.min(MAX_SIGNER_FRAME_HEIGHT, height));
+        }
+
+        function applySignerFrameHeight(height) {
+            const numeric = Number(height);
+            if (!Number.isFinite(numeric)) return;
+            const px = Math.round(clampSignerFrameHeight(numeric));
+            if (Math.abs(px - currentSignerFrameHeight) < 2) return;
+            currentSignerFrameHeight = px;
+            signerFrame.style.height = `${px}px`;
+        }
+
         function canonicalRelayUrl(url) {
             try {
                 return new URL(url).toString().replace(/\/$/, "");
@@ -305,6 +321,7 @@
                 const signerUrl = buildSignerFrameSrc(signerUrlInput.value.trim() || "./signer.html");
                 signerFrameOrigin = signerUrl.origin;
                 signerFrame.src = signerUrl.toString();
+                applySignerFrameHeight(MIN_SIGNER_FRAME_HEIGHT);
                 signerFrame.style.display = embedSignerInput.checked ? "block" : "none";
             } catch (err) {
                 setStatus(`Ungültige Signer-URL: ${err.message}`, true);
@@ -339,6 +356,10 @@
                     if (event.origin !== signerFrameOrigin) return;
                     const data = event.data;
                     if (!data || data.source !== BRIDGE_SOURCE) return;
+                    if (data.type === "frame-size") {
+                        applySignerFrameHeight(data.payload?.height);
+                        return;
+                    }
                     if (data.type !== "ready" && data.type !== "connection-info" && data.type !== "locked") return;
 
                     clearTimeout(timeout);
@@ -362,10 +383,14 @@
 
         function bridgeMessageHandler(event) {
             if (!signerFrameOrigin || event.origin !== signerFrameOrigin) return;
-            if (selectedConnectMode() === "nip7") return;
-            if (selectedConnectMode() === "auto" && hasNativeProviderAvailable()) return;
             const data = event.data;
             if (!data || data.source !== BRIDGE_SOURCE) return;
+            if (data.type === "frame-size") {
+                applySignerFrameHeight(data.payload?.height);
+                return;
+            }
+            if (selectedConnectMode() === "nip7") return;
+            if (selectedConnectMode() === "auto" && hasNativeProviderAvailable()) return;
             if (data.type !== "ready" && data.type !== "connection-info" && data.type !== "locked") return;
 
             if (data.type === "locked") {
@@ -663,6 +688,14 @@
 
         signerFrame.addEventListener("load", async () => {
             if (!embedSignerInput.checked) return;
+            try {
+                signerFrame.contentWindow?.postMessage(
+                    { source: BRIDGE_SOURCE, type: "request-frame-size" },
+                    signerFrameOrigin
+                );
+            } catch (_err) {
+                // ignore if iframe not yet ready
+            }
             try {
                 const info = await requestConnectionInfoFromIframe(1500);
                 applyConnectionInfo(info);
